Development
	Fix the window filling to the right on playlist reveal
	Better window size allocation when showing optional panes
	Allow loading a separate audio track when playing a video with Edit > Set Audio Issue #423
	Rework goto/return from fullscreen code 
	Support LIBNOTIFY 0.7 and higher bug #454
	Fix compile on GTK 2.12
	Update Lithuaninan translation bug #458
	Apply patch from bug #457
	Make audio meter display db values, based on af_stats plugin from mplayer
	Revert parts of the update technique, it made the gui crash, cpu usage is still lower
	Experimental audio meter update technique, should use less CPU and be more interactive
	Use pretty gradients in the audio meter
	Use cairo to draw audio meter bars
	Updated Czech translation
	Don't hide controls and mouse in fullscreen mode when mouse is over controls
1.0.0
	Updated es and pt_BR translations from Launchpad
	Fix bug #444 - embedded fonts not being used in mkv files
	Fix case of cache fill display not being reset with remote files
	Set cache fill graphical display to 0 once streaming media is started
	Enable screensaver at quit
	Add cache percentage graphical display to the tracker
0.9.99.rc3
	Updated Finnish translation
	Version bump to 0.9.99rc2
	Fixed problem with --fullscreen flag not working
	Updated Polish translation
	Apply patch found in bug report #431
	Updated French translation
	Updated Serbian translations
	Updated Polish translation
	Apply corrected patch for brightness, etc in gl2 mode
	Update copyright date range
	Apply Patches to Japanese translated values from Munehiro Yamamoto
	Fix bug #430 - Album art size
	Updated Turkish translation
	Updated Danish translation
	Updated Hungarian translation
	Updated Catalan translation
	Updated Czech translation
	Updated German translation
	Patch from Onur Küçük to keep desktop gamma from being adjusted when using mplayer gl2 driver
	Updated Desktop file patch from Onur Küçük