@@ -1,4 +1,5 @@
 Development
+	Only create status icon when needed
 	Fix the window filling to the right on playlist reveal
 	Better window size allocation when showing optional panes
 	Allow loading a separate audio track when playing a video with Edit > Set Audio Issue #423
